bases/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  annotations:
    mimikyu.reynn.net/resource-profiile: small
spec:
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k3s.io/hostname
                    operator: In
                    values:
                      - mimikyu
      containers:
        - name: lidarr
          image: linuxserver/lidarr
          resources: {}
          ports:
            - containerPort: 8686
              name: tcp-server
          volumeMounts:
            - name: config
              mountPath: /music
            - name: music
              mountPath: /media/deadpool/music
            - name: downloads
              mountPath: /media/deadpool/downloads
      volumes:
        - name: music
          hostPath:
            path: /media/deadpool/music
            type: Directory
        - name: downloads
          hostPath:
            path: /media/deadpool/downloads
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
